Доделать класс HttpTaskManagerTasksTest.